--- a/src/ui/hospital/HospitalAdminMainFrame.form
+++ b/src/ui/hospital/HospitalAdminMainFrame.form
@@ -55,11 +55,12 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="btnEncounter" linkSize="1" min="-2" max="-2" attributes="0"/>
                           <Component id="btnDoctorManagement" linkSize="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnHospitalManagement" linkSize="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnManageDoctor" linkSize="1" min="-2" max="-2" attributes="0"/>
                           <Component id="btnAuthManagement" linkSize="1" min="-2" pref="86" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="63" max="32767" attributes="0"/>
+                      <EmptySpace pref="45" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -69,10 +70,12 @@
                       <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
                       <Component id="btnAuthManagement" linkSize="2" min="-2" pref="41" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                      <Component id="btnHospitalManagement" linkSize="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnManageDoctor" linkSize="2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                       <Component id="btnDoctorManagement" linkSize="2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="305" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="btnEncounter" linkSize="2" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="230" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -89,7 +92,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAuthManagementActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="btnHospitalManagement">
+            <Component class="javax.swing.JButton" name="btnManageDoctor">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/assets/TimeCard.png"/>
@@ -97,7 +100,7 @@
                 <Property name="text" type="java.lang.String" value="Doctor"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHospitalManagementActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnManageDoctorActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnDoctorManagement">
@@ -109,6 +112,17 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDoctorManagementActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="btnEncounter">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/assets/ActualSizeHS.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Encounter"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEncounterActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
